# template-python3-flask

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CONTRIBUTING.md
docs/hello_world/: arguments.md  hello.md  index.md  logs.md
docs/my_service/: arguments.md  hellos.md  index.md  logs.md  metrics.md  service.md
my_service/: __main__.py  arguments.py  hellos.py  logs.py  metrics.py  service.py
scripts/mk/: container.mk  includes.mk  printvars.mk  private.template.mk  python-flask-rules.mk  variables.mk
scripts/sh/: populate.py
tests/: test_arguments.py  test_hellos.py  test_service.py
tests/integration/: fixtures.py  test_healthcheck.py  test_hellos.py
