# https://docs.pytest.org/en/latest/explanation/goodpractices
# https://packaging.python.org/en/latest/guides/writing-pypro
[tool.poetry]
name = "my-service"
version = "0.1.0"
description = "hello world flask service"
authors = ["Alejandro Visiedo <alejandro.visiedo@gmail.com>"]
license = "APACHE-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest-cov = ">=6.2.1,<6.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<8.4.0"
black = ">=25.1.0,<25.2.0"
pylint = ">=3.3.7,<3.4.0"
pdoc3 = ">=0.11.6,<0.12.0"
flask = ">=3.1.1,<3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
